# EmbedGitHash

./: CMakeLists.txt  README.md  make_version.sh
app_Main/: CMakeLists.txt  main.cpp
lib_System/: CMakeLists.txt
